--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Orevaoghene Ahia</title>
+    <title>Steven Kolawole</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -17,14 +17,15 @@
         <nav class="nav">
             <div class="container flex-wrap">
                 <h1 class="logo">
-                    <a href="https://orevaahia.github.io//">Orevaoghene Ahia</a>
+                    <a href="https://stevenkolawole.github.io//">Steven Kolawole</a>
                 </h1>
                 <ul class="navbar">
                     <li><a href="index.html">About</a></li>
+<!--                     <li><a href=...>News</a></li> -->
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="https://scholar.google.com/citations?user=xoNi-cIAAAAJ&hl=en" target="_blank">Publications</a></li>
-                    <li><a href="https://unsplash.com/@orevaoghene" target="_blank">Photography</a></li>
-                    <li><a href="https://drive.google.com/file/d/12OjWsjnWcsJydTGgc2WZp65a_c4pohu9/view?usp=sharing" target="_blank">Resume</a></li>
+                    <li><a href="https://scholar.google.com/citations?user=cekASD4AAAAJ&hl=en" target="_blank">Publications</a></li>
+                    <li><a href="interest.html" target="_blank">Interest</a></li>
+                    <li><a href="https://docs.google.com/document/d/1e8toft1aO3pdMJGN_KqWo8-6xMY6Jh7O/edit?usp=sharing&ouid=111944828990443216883&rtpof=true&sd=true" target="_blank">Resume</a></li>
                 </ul>
             </div>
         </nav>
@@ -33,21 +34,21 @@
         <div class="page-content">
             <div class="page-intro">
                 <div class="page-intro-item">
-                    <strong>Orevaoghene Ahia</strong>
+                    <strong>Steven Kolawole</strong>
                     <br> <br> Email:
-                    <a href="mailto: oahia@cs.washington.edu">oahia@cs.washington.edu</a>
+                    <a href="mailto: kolawolesteven99@gmail.com">kolawolesteven99@gmail.com</a>
                     <br>
                     <div class="social">
-                        <a class="social-item" href="https://github.com/orevaahia" target="_blank">
+                        <a class="social-item" href="https://github.com/stevenkolawole" target="_blank">
                             <i class="fab fa-github" href="#" aria-hidden="true"></i>
                         </a> /
-                        <a class="social-item" href="https://www.linkedin.com/in/orevaoghene-ahia-a1a893125/" target="_blank">
+                        <a class="social-item" href="https://www.linkedin.com/in/steven-kolawole-80/" target="_blank">
                             <i class="fab fa-linkedin" href="#" aria-hidden="true"></i>
                         </a> /
-                        <a class="social-item" href="https://twitter.com/orevaahia" target="_blank">
+                        <a class="social-item" href="https://twitter.com/steveddev" target="_blank">
                             <i class="fab fa-twitter" href="#" aria-hidden="true"></i>
                         </a>
-                        <a class="social-item" href="https://scholar.google.com/citations?user=xoNi-cIAAAAJ&hl=en" target="_blank">
+                        <a class="social-item" href="https://scholar.google.com/citations?user=cekASD4AAAAJ&hl=en" target="_blank">
                             <i class="ai ai-google-scholar-square ai-2em" href="#" aria-hidden="true"></i>
                         </a>
 
@@ -59,18 +60,20 @@
                 </div>
             </div>
             <p>Hi, welcome to my website!</p>
-            <p style="text-align: justify;">I am a first year PHD student in Computer Science and Engineering at the University of Washington advised by <a href="https://nasmith.github.io/"
-                target="_blank"><span style="color: rgb(10, 93, 128)">Noah A. Smith</span></a> and <a href="https://homes.cs.washington.edu/~yuliats/" target="_blank"><span style="color: rgb(10, 93, 128)">Yulia Tsvetkov</span></a>. Previously I was a Research Engineer at <a href="https://www.instadeep.com/"
-                    target="_blank"><span style="color: rgb(10, 93, 128)">Instadeep</span></a> working on AI solutions for enterprise clients. My research interests include Low resourced NLP, NMT and Multilingual Language Models. 
-        </div>
+            <p style="text-align: justify;">I am a Computer Science undergrad in my final semester at the Federal University of Agriculture Abeokuta. I am an independent researcher with my strongest research affliation being <a href="https://mlcollective.org/"
+                target="_blank"><span style="color: rgb(10, 93, 128)">ML Collective</span></a>, where I am being mentored by <a href="https://rosanneliu.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Rosanne</span></a> and <a href="https://yosinski.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Jason Yosinski</span></a>.
+                My research interests are centered around tackling efficiency problems in machine learning from algorithms, methods, data, and system perspectives. 
+            </p>
+             <p> On the side, I am flexing my engineering muscles building a funded project with my friends (and sister) called <a href="https://asalytics.ai/" target="_blank"><span style="color: rgb(10, 93, 128)">ASAlytics (or Nazari)</span></a> which is a
+                 dynamic social media opinion mining platform for digital assets on with real-time analytics and data retrieval Twitter, Reddit and GitHub.>
     </article>
     <footer class="site-footer">
         <div class="container">
             <small>
-                    <b>Last Updated:</b> Sep 22, 2021
+                    <b>Last Updated:</b> Oct 22, 2022
                 </small>
             <small class="block">
-                    © 2021 Orevaoghene Ahia · &lt;/&gt; Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/heiswayi/thinkspace" target="_blank">Thinkspace</a>; hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+                    © Steven Kolawole. Forked from <a href="https://orevaahia.github.io/" target="_blank"><span style="color: rgb(10, 93, 128)">Oreva Ahia's page</span></a>· &lt;/&gt; Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/heiswayi/thinkspace" target="_blank">Thinkspace</a>; hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
                 </small>
         </div>
     </footer>
