modify main page

--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Oreva's blog</title>
+        <title>Steven's blog</title>
         <link rel="stylesheet"
         type = "text/css"
         href = './stylesheets/blog-post.css'>
@@ -11,7 +11,6 @@
 
     <h1 class="header-name">Coming soon !!!!</h1>
     
-
         
 </body>
 </html>
