--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
         <nav class="nav">
             <div class="container flex-wrap">
                 <h1 class="logo">
-                    <a href="https://stevenkolawole.github.io//">Steven Kolawole</a>
+                    <a href="https://stevenkolawole.github.io/">Steven Kolawole</a>
                 </h1>
                 <ul class="navbar">
                     <li><a href="index.html">About</a></li>
-<!--                     <li><a href=...>News</a></li> -->
+                    <li><a href="news.html">News</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="https://scholar.google.com/citations?user=cekASD4AAAAJ&hl=en" target="_blank">Publications</a></li>
-                    <li><a href="interest.html" target="_blank">Interest</a></li>
                     <li><a href="https://docs.google.com/document/d/1e8toft1aO3pdMJGN_KqWo8-6xMY6Jh7O/edit?usp=sharing&ouid=111944828990443216883&rtpof=true&sd=true" target="_blank">Resume</a></li>
                 </ul>
             </div>
@@ -56,16 +55,16 @@
                     </div>
                 </div>
                 <div class="page-intro-item">
-                    <img src="assets/img/braids.jpg" alt="Orevaoghene" width="180px" class="roundImg">
+                    <img src="assets/img/steven_professional.jpeg" alt="Steven_Kolawole" width="180px" class="roundImg">
                 </div>
             </div>
             <p>Hi, welcome to my website!</p>
-            <p style="text-align: justify;">I am a Computer Science undergrad in my final semester at the Federal University of Agriculture Abeokuta. I am an independent researcher with my strongest research affliation being <a href="https://mlcollective.org/"
-                target="_blank"><span style="color: rgb(10, 93, 128)">ML Collective</span></a>, where I am being mentored by <a href="https://rosanneliu.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Rosanne</span></a> and <a href="https://yosinski.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Jason Yosinski</span></a>.
+            <p style="text-align: justify;">I am a Computer Science undergrad in my final semester at the Federal University of Agriculture Abeokuta, Nigeria. I am an independent researcher with my strongest research affliation being <a href="https://mlcollective.org/"
+                target="_blank"><span style="color: rgb(10, 93, 128)">ML Collective</span></a>, where I am primarily mentored by <a href="https://rosanneliu.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Rosanne Liu</span></a> and <a href="https://yosinski.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Jason Yosinski</span></a>.
                 My research interests are centered around tackling efficiency problems in machine learning from algorithms, methods, data, and system perspectives. 
             </p>
-             <p> On the side, I am flexing my engineering muscles building a funded project with my friends (and sister) called <a href="https://asalytics.ai/" target="_blank"><span style="color: rgb(10, 93, 128)">ASAlytics (or Nazari)</span></a> which is a
-                 dynamic social media opinion mining platform for digital assets on with real-time analytics and data retrieval Twitter, Reddit and GitHub.>
+             <p style="text-align: justify;"> On the side, I am flexing my engineering muscles building a funded project with my friends (and my sister) called <a href="https://asalytics.ai/" target="_blank"><span style="color: rgb(10, 93, 128)">ASAlytics</span></a> - a
+                 dynamic social media opinion mining platform for digital assets with real-time analytics and data retrieval from Twitter, Reddit and GitHub. Non-work-wise, I routinely weightlift, make music, and add to my bank of "useless" knowledge via diverse reading.</p>
     </article>
     <footer class="site-footer">
         <div class="container">
