update news with community outreaches

--- a/news.html
+++ b/news.html
@@ -40,9 +40,11 @@
         <li>I am resuming my final session in school as a CS undergrad. (Nov 2021)</li>
         <li>I got a full-time role with RectLabs as an AI Research Engineer. (Oct 2021)</li>
         <li>My work on Sign-to-Speech for sub-Saharan Africa has been accepted at <a href="https://ml4d.notion.site/Machine-Learning-for-the-Developing-World-ML4D-2021-548251eab3df4517819c4742c2e5c853"><span style="color: rgb(10, 93, 128)">the NeurIPS workshop on ML for the Developing World</span></a>. (Oct 2021)</li>
+        <li>I am leaving my community role as the Campus Lead for AI+ FUNAAB. Mainly because I am now the new community Lead for the Google Developer Student Club of my school.</li>
         <li>My work on sign language understanding won the 2nd Best Poster Award at <a href="https://www.datasciencenigeria.org/2021-bootcamp/"><span style="color: rgb(10, 93, 128)">DSN’s AI Bootcamp</span></a>. (Oct 2021)</li>
         <li>My research internship with <a href="https://www.seqhubanalytics.com/"><span style="color: rgb(10, 93, 128)">SeqHub Analytics LLC</span></a> is finally over. (Oct 2021)</li>
         <li>My work on sign-to-speech for real-time usage won <a href="https://www.deepquestai.com/"><span style="color: rgb(10, 93, 128)">DeepQuest's</span></a> AI Challenge. (July 2021)</li>
+        <li>I am leaving my community outreach role as the AI+ City Lead for AI+ Abeokuta. (Jan 2020)</li>
         <li>AI+ Abeokuta won the <a href="https://twitter.com/dsn_ai_network/status/1328669596216389632"><span style="color: rgb(10, 93, 128)">“AI City of the Year” award</span></a>, and I was the 1st runner-up to the <a href="https://twitter.com/dsn_ai_network/status/1327195508805423104"><span style="color: rgb(10, 93, 128)">Mr. Algorithm award</span></a> at <a href="https://www.datasciencenigeria.org/2020-bootcamp/"><span style="color: rgb(10, 93, 128)">the DSN AI Bootcamp 2020</span></a>. (Oct 2020)</li>
     </ul>
     
