--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
             <p>Hi, welcome to my website!</p>
             <p style="text-align: justify;">I am a Computer Science undergrad in my final semester at the Federal University of Agriculture Abeokuta, Nigeria. I am an independent researcher with my strongest research affliation being <a href="https://mlcollective.org/"
                 target="_blank"><span style="color: rgb(10, 93, 128)">ML Collective</span></a>, where I am primarily mentored by <a href="https://rosanneliu.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Rosanne Liu</span></a> and <a href="https://yosinski.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Jason Yosinski</span></a>.
-                My research interests are centered around tackling efficiency problems in machine learning from algorithms, methods, data, and system perspectives. 
+                My research interests are centered around tackling efficiency problems in machine learning from algorithms, methods, data, and system perspectives. In my head, the big goal is to drive accessibility and participation in the creation of the AI technologies we use while resources cease to be a bottleneck or criteria to being part of the decision making process.
             </p>
-             <p style="text-align: justify;"> On the side, I am flexing my engineering muscles building a funded project with my friends (and my sister) called <a href="https://asalytics.ai/" target="_blank"><span style="color: rgb(10, 93, 128)">ASAlytics</span></a> - a
-                 dynamic social media opinion mining platform for digital assets with real-time analytics and data retrieval from Twitter, Reddit and GitHub. Non-work-wise, I routinely weightlift, make music, and add to my bank of "useless" knowledge via diverse reading.</p>
+             <p style="text-align: justify;">On the side, I am flexing my engineering muscles building a funded, open-source project with my friends (and my sister) called <a href="https://asalytics.ai/" target="_blank"><span style="color: rgb(10, 93, 128)">ASAlytics</span></a> - a
+                 dynamic and real social media opinion mining platform for digital assets with real-time analytics and data retrieval from Twitter, Reddit and GitHub.</p>
+            <p style="text-align: justify;">Non-work-wise, I routinely weightlift, make music, and add to my bank of "useless" knowledge via diverse reading. 
+                And I try to finetune my clowning game with every chance I get - through my conversations with friends, via my speaking engagements, and in my head.
+            </p>
     </article>
     <footer class="site-footer">
         <div class="container">
