Steven Blog fixes

--- a/index.html
+++ b/index.html
@@ -69,6 +69,47 @@
                 And I try to finetune my clowning game with every chance I get - through my conversations with friends, via my speaking engagements, and in my head.
             </p>
     </article>
+    <div class="container">
+        <h1 class="header-name">News</h1>
+        <ul class="list">
+          <li>I will serve as a volunteer at NeurIPS 2022.</li>
+          <li>
+            I am invited to come speak at
+            <a href="https://lanfrica.com/blog/"
+              ><span style="color: rgb(10, 93, 128)">LanAfrica Talks</span></a
+            >
+            in November on my sign language understanding project. Hopefully, my
+            last talk on this topic. :) (Oct 2022)
+          </li>
+          <li>
+            We have finally fulfilled the terms of our grant from the
+            <a href="https://www.algorand.foundation/"
+              ><span style="color: rgb(10, 93, 128)">Algorand Foundation</span></a
+            >, and our funded project,
+            <a href=""
+              ><span style="color: rgb(10, 93, 128)"
+                >ASAlytics (now Nazari)</span
+              ></a
+            >, is finally ready for UAT. (Oct 2022)
+          </li>
+          <li>
+            I am invited to speak on my research journey as a URM in Africa and
+            how I have been able to build my research collaborations as a
+            non-traditional and independent researcher at
+            <a
+              href="https://sites.google.com/view/broadening-collaboration-in-ml/home?authuser=0"
+              ><span style="color: rgb(10, 93, 128)"
+                >NeurIPS 2022 Workshop on Broadening Research Collaborations in
+                ML</span
+              ></a
+            >.
+          </li>
+        </ul>
+        <div class="read-more-button">
+            <a href="/news" >Read More</a>
+        </div>
+
+    </div>
     <footer class="site-footer">
         <div class="container">
             <small>
