correct typos in news.html

--- a/news.html
+++ b/news.html
@@ -268,9 +268,9 @@
           understanding. (March 2022)
         </li>
         <li>
-          Finally finished my first semester as a CS finalist, but the lecturers
+          Finally finished my first semester as a CS finalist. However, the lecturers
           have gone on an indefinite strike action so I can't finish BSc in
-          June/July again. (Feb 2022)
+          June/July again. :( (Feb 2022)
         </li>
         <li>
           ASAlytics, our work proposal to build a real-time social media
@@ -300,8 +300,8 @@
         </li>
         <li>
           I am leaving my community role as the Campus Lead for AI+ FUNAAB.
-          Mainly because I am now the new community Lead for the Google
-          Developer Student Club of my school.
+          Chiefl because I am resuming the Community Lead's role for the Google
+          Developer Student Club in my school.
         </li>
         <li>
           My work on sign language understanding won the 2nd Best Poster Award
@@ -328,7 +328,7 @@
         </li>
         <li>
           I am leaving my community outreach role as the AI+ City Lead for AI+
-          Abeokuta. (Jan 2020)
+          Abeokuta. (Jan 2021)
         </li>
         <li>
           AI+ Abeokuta won the
@@ -347,7 +347,7 @@
             ><span style="color: rgb(10, 93, 128)"
               >the DSN AI Bootcamp 2020</span
             ></a
-          >. (Oct 2020)
+          >. (Nov 2020)
         </li>
       </ul>
     </div>
