correct typos in news.html

--- a/news.html
+++ b/news.html
@@ -65,7 +65,7 @@
           <a href="https://www.algorand.foundation/"
             ><span style="color: rgb(10, 93, 128)">Algorand Foundation</span></a
           >, and our funded project,
-          <a href=""
+          <a href="https://nazari.ai/"
             ><span style="color: rgb(10, 93, 128)"
               >ASAlytics (now Nazari)</span
             ></a
