correct typos in news.html

--- a/news.html
+++ b/news.html
@@ -84,7 +84,7 @@
           >.
         </li>
         <li>
-          I gave a very hilarious talk to date at DataFest Africa on the path to
+          I gave my most hilarious and comic-filled talk to date at DataFest Africa on the path to
           ML mastery. Check my slides
           <a
             href="https://docs.google.com/presentation/d/1-CR1FgjHNHhNdBB3Jxfj7bqH_HYBwA08/edit?usp=sharing&ouid=111944828990443216883&rtpof=true&sd=true"
@@ -137,7 +137,7 @@
             ><span style="color: rgb(10, 93, 128)">Our work</span></a
           >
           on African Sign Languages Translation is one of the winners of the
-          Indaba Project Pitch. Congrats, Shester and Mardiyyah! (Aug 2022)
+          Indaba Ideathon Challenge. Congrats, Shester and Mardiyyah! (Aug 2022)
         </li>
         <li>
           I will be presenting my work on minimizing communication costs in
