--- a/news.html
+++ b/news.html
@@ -55,7 +55,7 @@
         <li>
           I am invited to come speak at
           <a href="https://lanfrica.com/blog/"
-            ><span style="color: rgb(10, 93, 128)">LanAfrica Talks</span></a
+            ><span style="color: rgb(10, 93, 128)">Lanfrica Talks</span></a
           >
           in November on my sign language understanding project. Hopefully, my
           last talk on this topic. :) (Oct 2022)
