--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a class="social-item" href="https://www.linkedin.com/in/steven-kolawole-80/" target="_blank">
                             <i class="fab fa-linkedin" href="#" aria-hidden="true"></i>
                         </a> /
-                        <a class="social-item" href="https://twitter.com/steveddev" target="_blank">
+                        <a class="social-item" href="https://twitter.com/_stevenkolawole" target="_blank">
                             <i class="fab fa-twitter" href="#" aria-hidden="true"></i>
                         </a>
                         <a class="social-item" href="https://scholar.google.com/citations?user=cekASD4AAAAJ&hl=en" target="_blank">
@@ -76,7 +76,7 @@
           <li>
             I am invited to come speak at
             <a href="https://lanfrica.com/blog/"
-              ><span style="color: rgb(10, 93, 128)">LanAfrica Talks</span></a
+              ><span style="color: rgb(10, 93, 128)">Lanfrica Talks</span></a
             >
             in November on my sign language understanding project. Hopefully, my
             last talk on this topic. :) (Oct 2022)
