--- a/blog.html
+++ b/blog.html
@@ -28,21 +28,10 @@
               <ul class="navbar">
                 <li><a href="index.html">About</a></li>
                 <li><a href="news.html">News</a></li>
+                
                 <li><a href="blog.html">Blog</a></li>
-                <li>
-                  <a
-                    href="https://scholar.google.com/citations?user=cekASD4AAAAJ&hl=en"
-                    target="_blank"
-                    >Publications</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="https://docs.google.com/document/d/1e8toft1aO3pdMJGN_KqWo8-6xMY6Jh7O/edit?usp=sharing&ouid=111944828990443216883&rtpof=true&sd=true"
-                    target="_blank"
-                    >Resume</a
-                  >
-                </li>
+                <li><a href="assets/Steven_Kolawole_CV.pdf" target="_blank">CV</a></li>
+                <li><a href="https://scholar.google.com/citations?user=cekASD4AAAAJ&hl=en" target="_blank">Publications</a></li>
               </ul>
             </div>
           </nav>
