--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="index.html">About</a></li>
                     <li><a href="news.html">News</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="assets/Steven_Kolawole_CV.pdf" target="_blank">CV</a></li>
+                    <li><a href="assets/Steven_Kolawole_CV.pdf">CV</a></li>
                     <li><a href="https://scholar.google.com/citations?user=cekASD4AAAAJ&hl=en" target="_blank">Publications</a></li>
                 </ul>
             </div>
@@ -55,11 +55,11 @@
                     </div>
                 </div>
                 <div class="page-intro-item">
-                    <img src="assets/img/steven_professional.jpeg" alt="Steven_Kolawole" width="180px" class="roundImg">
+                    <img src="assets/img/steven_professional.jpeg" alt="Steven_Keolawole" width="180px" class="roundImg">
                 </div>
             </div>
             <p>Hi, welcome to my website!</p>
-            <p style="text-align: justify;">I am a Computer Science undergrad in my final semester at the Federal University of Agriculture Abeokuta, Nigeria. I am an independent researcher with my strongest research affiliation being <a href="https://mlcollective.org/"
+            <p style="text-align: justify;">I am a Computer Science undergrad in my final semester at the Federal University of Agriculture Abeokuta, Nigeria. I am an independent researcher with <a href="https://mlcollective.org/"
                 target="_blank"><span style="color: rgb(10, 93, 128)">ML Collective</span></a>, where I am primarily mentored by <a href="https://rosanneliu.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Rosanne Liu</span></a> and <a href="https://yosinski.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Jason Yosinski</span></a>.
                 My research interests are centered around tackling efficiency problems in machine learning from algorithms, methods, data, and system perspectives. In my head, the big goal is to drive accessibility and participation in the creation of the AI technologies we use so that resources cease to be a bottleneck or criteria to being part of the decision making process.
             </p>
@@ -116,7 +116,7 @@
                     <b>Last Updated:</b> Oct 22, 2022
                 </small>
             <small class="block">
-                    © Steven Kolawole. Forked from <a href="https://orevaahia.github.io/" target="_blank"><span style="color: rgb(10, 93, 128)">Oreva Ahia's page</span></a>· &lt;/&gt; Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/heiswayi/thinkspace" target="_blank">Thinkspace</a>; hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+                    © Steven Kolawole. Shamelessly forked from <a href="https://orevaahia.github.io/" target="_blank"><span style="color: rgb(10, 93, 128)">Oreva Ahia's page</span></a>· &lt;/&gt; Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/heiswayi/thinkspace" target="_blank">Thinkspace</a>; hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
                 </small>
         </div>
     </footer>
