--- a/news.html
+++ b/news.html
@@ -30,7 +30,7 @@
             <li><a href="news.html">News</a></li>
             
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="assets/Steven_Kolawole_CV.pdf" target="_blank">CV</a></li>
+            <li><a href="assets/Steven_Kolawole_CV.pdf">CV</a></li>
             <li><a href="https://scholar.google.com/citations?user=cekASD4AAAAJ&hl=en" target="_blank">Publications</a></li>
           </ul>
         </div>
