--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
 
 <head>
-    <title>Steven Kolawole</title>
+    <title>Steven Kolawole's Website</title>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="x90m5dgpe4F2vr3QIo56ycq2CR3JKLvZvqDGZ25jIss" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Here is Steven's website where you'd find up-to-date information about his research work and other activities.</meta>">
+    <meta name="keywords" content="Steven Kolawole, Research, ML, Machine Learning, Python, Computer Science">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+    <link rel="author" href="https://stevenkolawole.medium.com/"/>
+    <link rel="author" href="https://www.linkedin.com/in/steven-kolawole-80/"/>
+    <link rel="author" href="https://hashnode.com/@stevekola"/>
 </head>
 
 <body>
@@ -93,9 +99,8 @@
             >, is finally ready for UAT. (Oct 2022)
           </li>
           <li>
-            I am invited to speak on my research journey as a URM in Africa and
-            how I have been able to build my research collaborations as a
-            non-traditional and independent researcher at
+            I am invited to speak on my research journey as a URM and
+          how I have been able to build my research collaborations as an independent researcher at
             <a
               href="https://sites.google.com/view/broadening-collaboration-in-ml/home?authuser=0"
               ><span style="color: rgb(10, 93, 128)"
