--- a/news.html
+++ b/news.html
@@ -61,9 +61,8 @@
           >, is finally ready for UAT. (Oct 2022)
         </li>
         <li>
-          I am invited to speak on my research journey as a URM in Africa and
-          how I have been able to build my research collaborations as a
-          non-traditional and independent researcher at
+          I am invited to speak on my research journey as a URM and
+          how I have been able to build my research collaborations as an independent researcher at
           <a
             href="https://sites.google.com/view/broadening-collaboration-in-ml/home?authuser=0"
             ><span style="color: rgb(10, 93, 128)"
