--- a/news.html
+++ b/news.html
@@ -77,7 +77,7 @@
           <a
             href="https://docs.google.com/presentation/d/1-CR1FgjHNHhNdBB3Jxfj7bqH_HYBwA08/edit?usp=sharing&ouid=111944828990443216883&rtpof=true&sd=true"
             ><span style="color: rgb(10, 93, 128)">here</span></a
-          >; I am proud of how terrific my sense of humor is. :D (Oct 2022)
+          >; EDIT: I am invited to present the same talk at DevFest Abeokuta in December. (Oct 2022)
         </li>
         <li>
           <a
