update the metadata

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>Steven Kolawole's Website</title>
+    <title>Steven Kolawole\</title>
     <meta charset="utf-8">
     <meta name="google-site-verification" content="x90m5dgpe4F2vr3QIo56ycq2CR3JKLvZvqDGZ25jIss" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Here is Steven's website where you'd find up-to-date information about his research work and other activities.</meta>">
+    <meta name="description" content="This website is for Steven Kolawole where you'd find up-to-date information about his research work and other activities.</meta>">
     <meta name="keywords" content="Steven Kolawole, Research, ML, Machine Learning, Python, Computer Science">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -64,7 +64,7 @@
                     <img src="assets/img/steven_professional.jpeg" alt="Steven_Keolawole" width="180px" class="roundImg">
                 </div>
             </div>
-            <p>Hi, welcome to my website!</p>
+            <p>Hi, welcome to my website! :)</p>
             <p style="text-align: justify;">I am a Computer Science undergrad in my final semester at the Federal University of Agriculture Abeokuta, Nigeria. I am an independent researcher with <a href="https://mlcollective.org/"
                 target="_blank"><span style="color: rgb(10, 93, 128)">ML Collective</span></a>, where I am primarily mentored by <a href="https://rosanneliu.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Rosanne Liu</span></a> and <a href="https://yosinski.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Jason Yosinski</span></a>.
             </p>
