add new paper alert to news section

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>Steven Kolawole\</title>
+    <title>Steven Kolawole</title>
     <meta charset="utf-8">
-    <meta name="google-site-verification" content="x90m5dgpe4F2vr3QIo56ycq2CR3JKLvZvqDGZ25jIss" />
+    <meta name="google-site-verification" content="x90m5dgpe4F2vr3QIo56ycq2CR3JKLvZvqDGZ25jIss">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="This website is for Steven Kolawole where you'd find up-to-date information about his research work and other activities.</meta>">
+    <meta name="description" content="This website is for Steven Kolawole where you'd find up-to-date information about his research work and other activities.">
     <meta name="keywords" content="Steven Kolawole, Research, ML, Machine Learning, Python, Computer Science">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -23,7 +23,7 @@
         <nav class="nav">
             <div class="container flex-wrap">
                 <h1 class="logo">
-                    <a href="https://stevenkolawole.github.io/">Steven Kolawole</a>
+                    <a href="https://stevenkolawole.github.io">Steven Kolawole</a>
                 </h1>
                 <ul class="navbar">
                     <li><a href="index.html">About</a></li>
@@ -78,8 +78,9 @@
     <div class="container">
         <h1 class="header-name">News</h1>
         <ul class="list">
-          <li>I will serve as a volunteer at NeurIPS 2022.</li>
-          <li>
+            <li>Our paper, <i>Adapting to the Low-Resource Double-Bind: Investigating Low-Compute Methods on Low-Resource African Languages</i>, was accepted into AfricaNLP '23 - collocated with ICLR '23  (Mar 2023).</li>
+            <li>I will serve as a volunteer at NeurIPS 2022. EDIT: I didn't get the US Visa to attend. :(</li>
+            <li>
             I am invited to come speak at
             <a href="https://lanfrica.com/blog/"
               ><span style="color: rgb(10, 93, 128)">Lanfrica Talks</span></a
