--- a/news.html
+++ b/news.html
@@ -40,7 +40,8 @@
     <div class="page container">
         <h1 class="header-name">News</h1>
       <ul class="list">
-        <li>I will serve as a volunteer at NeurIPS 2022.</li>
+        <li>Our paper, <i>Adapting to the Low-Resource Double-Bind: Investigating Low-Compute Methods on Low-Resource African Languages</i>, was accepted into AfricaNLP '23 - collocated with ICLR '23 (Mar 2023).</li>
+        <li>I will serve as a volunteer at NeurIPS 2022. EDIT: I didn't get a US Visa to attend. :(</li>
         <li>
           I am invited to come speak at
           <a href="https://lanfrica.com/blog/"
