--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="en">
 
 <head>
-    <title>Steven Kolawole</title>
+    <title>Victor Ojewale</title>
     <meta charset="utf-8">
     <meta name="google-site-verification" content="x90m5dgpe4F2vr3QIo56ycq2CR3JKLvZvqDGZ25jIss">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="This website is for Steven Kolawole where you'd find up-to-date information about his research work and other activities.">
-    <meta name="keywords" content="Steven Kolawole, Research, ML, Machine Learning, Python, Computer Science">
+    <meta name="description" content="This website is for Victor Ojewale where you'd find up-to-date information about his research work and other activities.">
+    <meta name="keywords" content="Victor Ojewale, Research, Algorithmic Fairness, Machine Learning, Python, Computer Science">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-    <link rel="author" href="https://stevenkolawole.medium.com/"/>
-    <link rel="author" href="https://www.linkedin.com/in/steven-kolawole-80/"/>
-    <link rel="author" href="https://hashnode.com/@stevekola"/>
+    <link rel="author" href="https://medium.com/@elVictor01">
+    <link rel="author" href="https://www.linkedin.com/in/elvictor/">
 </head>
 
 <body>
@@ -23,14 +22,13 @@
         <nav class="nav">
             <div class="container flex-wrap">
                 <h1 class="logo">
-                    <a href="https://stevenkolawole.github.io">Steven Kolawole</a>
+                    <a href="https://victorojewale.github.io">Victor Ojewale</a>
                 </h1>
                 <ul class="navbar">
                     <li><a href="index.html">About</a></li>
-                    <li><a href="news.html">News</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="assets/Steven_Kolawole_CV.pdf">CV</a></li>
-                    <li><a href="https://scholar.google.com/citations?user=cekASD4AAAAJ&hl=en" target="_blank">Publications</a></li>
+                    <li><a href="assets/OjewaleCV2.pdf">CV</a></li>
+                    <li><a href="" target="_blank">Publications</a></li>
                 </ul>
             </div>
         </nav>
@@ -39,90 +37,51 @@
         <div class="page-content">
             <div class="page-intro">
                 <div class="page-intro-item">
-                    <strong>Steven Kolawole</strong>
+                    <strong>Victor Ojewale</strong>
                     <br> <br> Email:
-                    <a href="mailto: kolawolesteven99@gmail.com">kolawolesteven99@gmail.com</a>
+                    <a href="mailto: victordojewale@gmail.com">victordojewale@gmail.com</a>
                     <br>
                     <div class="social">
-                        <a class="social-item" href="https://github.com/stevenkolawole" target="_blank">
+                        <a class="social-item" href="https://github.com/Elvictor01" target="_blank">
                             <i class="fab fa-github" href="#" aria-hidden="true"></i>
                         </a> /
-                        <a class="social-item" href="https://www.linkedin.com/in/steven-kolawole-80/" target="_blank">
+                        <a class="social-item" href="https://www.linkedin.com/in/elvictor/" target="_blank">
                             <i class="fab fa-linkedin" href="#" aria-hidden="true"></i>
                         </a> /
-                        <a class="social-item" href="https://twitter.com/_stevenkolawole" target="_blank">
+                        <a class="social-item" href="https://twitter.com/OjewaleV" target="_blank">
                             <i class="fab fa-twitter" href="#" aria-hidden="true"></i>
                         </a>
-                        <a class="social-item" href="https://scholar.google.com/citations?user=cekASD4AAAAJ&hl=en" target="_blank">
-                            <i class="ai ai-google-scholar-square ai-2em" href="#" aria-hidden="true"></i>
-                        </a>
-
                         
                     </div>
                 </div>
                 <div class="page-intro-item">
-                    <img src="assets/img/steven_professional.jpeg" alt="Steven_Keolawole" width="180px" class="roundImg">
+                    <img src="assets/img/headshottypeNew.jpg" alt="Victor_Ojewale" width="180px" class="roundImg">
                 </div>
             </div>
             <p>Hi, welcome to my website! :)</p>
-            <p style="text-align: justify;">I am a Computer Science undergrad in my final semester at the Federal University of Agriculture Abeokuta, Nigeria. I am an independent researcher with <a href="https://mlcollective.org/"
-                target="_blank"><span style="color: rgb(10, 93, 128)">ML Collective</span></a>, where I am primarily mentored by <a href="https://rosanneliu.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Rosanne Liu</span></a> and <a href="https://yosinski.com/" target="_blank"><span style="color: rgb(10, 93, 128)">Jason Yosinski</span></a>.
+            <p style="text-align: justify;">I am an incoming PhD student at the Center for Tech Responsibility, Reimagination and Redesign in the Brown University Computer Science department. His research interests lie in understanding the impacts of algorithmic systems, particularly through the lenses of algorithmic (un)fairness and algorithm audits.
+                 where I would be advised by <a href="https://www.brown.edu/initiatives/data-science/people/suresh-venkatasubramanian" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Suresh Venkatasubramanian</span></a> 
             </p>
-            <p style="text-align: justify;">My research interests are centered around tackling efficiency problems in machine learning from algorithms, methods, data, and system perspectives. In my head, the big goal is to drive accessibility and participation in the creation of the AI technologies we use so that resources cease to be a bottleneck or criteria to being part of the decision making process.</p>
-             <p style="text-align: justify;">On the side, I am flexing my engineering muscles building a funded, open-source project with my friends (and my sister) called <a href="https://asalytics.ai/" target="_blank"><span style="color: rgb(10, 93, 128)">ASAlytics</span></a> - a
-                 dynamic social media opinion mining platform for digital assets with real-time analytics and data retrieval from Twitter, Reddit, and GitHub.</p>
-            <p style="text-align: justify;">Non-work-wise, I routinely weightlift, make music, and add to my bank of "useless" knowledge via diverse reading. 
-                Moreover, I try to finetune my clowning game with every chance I get - through my conversations with friends, via my speaking engagements, and in my head.
-            </p>
+            <p style="text-align: justify;"> I am currently a research assistant with both the RISE Lab at Brown University and The Mozilla OAT Project, where he is working to further develop his expertise in these areas.</p>
+             <p style="text-align: justify;">With a passion for exploring the ethical implications of emerging technologies, I am hoping to contribute to the development of more responsible and accountable technology systems.</p>
+
     </article>
     <div class="container">
         <h1 class="header-name">News</h1>
         <ul class="list">
-            <li>Our paper, <i>Adapting to the Low-Resource Double-Bind: Investigating Low-Compute Methods on Low-Resource African Languages</i>, was accepted into AfricaNLP '23 - collocated with ICLR '23  (Mar 2023).</li>
-            <li>I will serve as a volunteer at NeurIPS 2022. EDIT: I didn't get the US Visa to attend. :(</li>
-            <li>
-            I am invited to come speak at
-            <a href="https://lanfrica.com/blog/"
-              ><span style="color: rgb(10, 93, 128)">Lanfrica Talks</span></a
-            >
-            in November on my sign language understanding project. Hopefully, my
-            last talk on this topic. :) (Oct 2022)
-          </li>
-          <li>
-            We have finally fulfilled the terms of our grant from the
-            <a href="https://www.algorand.foundation/"
-              ><span style="color: rgb(10, 93, 128)">Algorand Foundation</span></a
-            >, and our funded project,
-            <a href="https://nazari.ai/"
-              ><span style="color: rgb(10, 93, 128)"
-                >ASAlytics (now Nazari)</span
-              ></a
-            >, is finally ready for UAT. (Oct 2022)
-          </li>
-          <li>
-            I am invited to speak on my research journey as a URM and
-          how I have been able to build my research collaborations as an independent researcher at
-            <a
-              href="https://sites.google.com/view/broadening-collaboration-in-ml/home?authuser=0"
-              ><span style="color: rgb(10, 93, 128)"
-                >NeurIPS 2022 Workshop on Broadening Research Collaborations in
-                ML</span
-              ></a
-            >.
-          </li>
+            <li>23/03/2023 : I co-facilitated a panel session on <a href="https://schedule.mozillafestival.org/session/WR9R7Z-1" target="_blank"><span style="color: rgb(10, 93, 128)"></span>Navigating the Open-Source Algorithm Audit tooling landscape</span></a> with <a href="https://abebabirhane.com/" target="_blank"><span style="color: rgb(10, 93, 128)"></span>Abeba Birhane</span></a>  at Mozfest, 2023</li>
+            <li>01/03/2023 : I officially accepted Brown's PhD offer to start in the fall</li>
+            
         </ul>
-        <div class="read-more-button">
-            <a href="/news" >Read More</a>
-        </div>
 
     </div>
     <footer class="site-footer">
         <div class="container">
             <small>
-                    <b>Last Updated:</b> Oct 22, 2022
+                    <b>Last Updated:</b> March 23, 2023
                 </small>
             <small class="block">
-                    © Steven Kolawole. Shamelessly forked from <a href="https://orevaahia.github.io/" target="_blank"><span style="color: rgb(10, 93, 128)">Oreva Ahia's page</span></a>· &lt;/&gt; Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/heiswayi/thinkspace" target="_blank">Thinkspace</a>; hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+                    © Victor Ojewale. Skillfully forked from <a href="https://stevenkolawole.github.io/" target="_blank"><span style="color: rgb(10, 93, 128)">Steven Kolawole's page</span></a>· &lt;/&gt; Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/heiswayi/thinkspace" target="_blank">Thinkspace</a>; hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
                 </small>
         </div>
     </footer>
