--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <p>Hi, welcome to my website! :)</p>
-            <p style="text-align: justify;">I am an incoming PhD student at the Center for Tech Responsibility, Reimagination and Redesign in the Brown University Computer Science department. His research interests lie in understanding the impacts of algorithmic systems, particularly through the lenses of algorithmic (un)fairness and algorithm audits.
+            <p style="text-align: justify;">I am an incoming PhD student at the Center for Tech Responsibility, Reimagination and Redesign in the Brown University Computer Science department. My research interests lie in understanding the impacts of algorithmic systems, particularly through the lenses of algorithmic (un)fairness and algorithm audits.
                  where I would be advised by <a href="https://www.brown.edu/initiatives/data-science/people/suresh-venkatasubramanian" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Suresh Venkatasubramanian</span></a> 
             </p>
             <p style="text-align: justify;"> I am currently the Lead Data Scientist at SeqHub Analytics llc and also a research assistant with both the RISE Lab at Brown University and The Mozilla OAT Project, where i am working to further develop my expertise in these areas.</p>
