--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                 </div>
             </div>
             <p>Hi, welcome to my website! :)</p>
-            <p style="text-align: justify;">I am an incoming PhD student at the Center for Tech Responsibility, Reimagination and Redesign in the Brown University Computer Science department. My research interests lie in understanding the impacts of algorithmic systems, particularly through the lenses of algorithmic (un)fairness and algorithm audits.
-                 where I would be advised by <a href="https://www.brown.edu/initiatives/data-science/people/suresh-venkatasubramanian" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Suresh Venkatasubramanian</span></a> 
+            <p style="text-align: justify;">I am an incoming PhD student at the Center for Tech Responsibility, Reimagination and Redesign in the Brown University Computer Science department  where I would be advised by <a href="https://www.brown.edu/initiatives/data-science/people/suresh-venkatasubramanian" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Suresh Venkatasubramanian</span></a> . 
+                My research interests lie in understanding the impacts of algorithmic systems, particularly through the lenses of algorithmic (un)fairness and algorithm audits. Previously, I studied Computer Science at the University of Ibadan.
+                
             </p>
             <p style="text-align: justify;"> I am currently the Lead Data Scientist at SeqHub Analytics llc and also a research assistant with both the RISE Lab at Brown University and The Mozilla OAT Project, where i am working to further develop my expertise in these areas.</p>
              <p style="text-align: justify;">With a passion for exploring the ethical implications of emerging technologies, I am hoping to contribute to the development of more responsible and accountable technology systems.</p>
