--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <p>Hi, welcome to my website! :)</p>
-            <p style="text-align: justify;">I am an incoming PhD student at the Center for Tech Responsibility, Reimagination and Redesign in the Brown University Computer Science department  where I would be advised by <a href="https://www.brown.edu/initiatives/data-science/people/suresh-venkatasubramanian" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Suresh Venkatasubramanian</span></a> . 
+            <p style="text-align: justify;">I am a PhD student at the Center for Tech Responsibility, Reimagination and Redesign in the Brown University Computer Science department  where I would be advised by <a href="https://www.brown.edu/initiatives/data-science/people/suresh-venkatasubramanian" target="_blank"><span style="color: rgb(10, 93, 128)">Prof.Suresh Venkatasubramanian</span></a> . 
                 My research interests lie in understanding the impacts of algorithmic systems, particularly through the lenses of algorithmic (un)fairness and algorithm audits. Previously, I studied Computer Science at the University of Ibadan.
                 
             </p>
