--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Victor Ojewale</title>
     <meta charset="utf-8">
-    <meta name="google-site-verification" content="x90m5dgpe4F2vr3QIo56ycq2CR3JKLvZvqDGZ25jIss">
+    <meta name="google-site-verification" content="e18R6OGvnwFU3J3b7evBeifVdC9HMNQPAyWCIm3B1qk" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="This website is for Victor Ojewale where you'd find up-to-date information about his research work and other activities.">
     <meta name="keywords" content="Victor Ojewale, Research, Algorithmic Fairness, Machine Learning, Python, Computer Science">
